# mutation-testing-tool

./: .gitignore  README.en.md  README.md  README.tr.md  pyproject.toml
.hypothesis/constants/: 006b559781a41f7f  00cd0b35ae2263ab  0248e5eab696101a  041b82baf95116f0  0541e0883077120f  0588a2471da78b21  0628f2618034526e  0677ab7621dab527  07475514dc0bbadb  07cbc26405169bc8  081e1b6ea4d5163e  0863bc6306419568  09ae28b390a241d0  09c940a775c04b02  09d768fa4c9c7896  0a174ab092bdf149  0b08334a64a0dc37  0b242a4a768117e8  0bde0b41d56b80f6  0cfa12dfbf9e9abb  0ed3e9276f6099d5  0f3055f4f8c7b25d  0f3acba2ec85a713  0f66965d79de8fb9  10fad77d2177d79c  10fe38bd54ef6b0a  11a4fb9bf042a054  1261a22f89f2adae  127e8fa3efd6a7b8  12e9ed0ad68a5dc8  1362779ed5c908c0  1395bff71c7d61c3  13b6ec42c7db497d  13e29a7b951a8e1e  13ebce9ca14a25a6  1451e8716a746de9  15f1b6a27c65c79e  161b8e1ee81d034f  166c5f455b7f05ad  173e83f58d65c6f5  (+382 more)
examples/beginner_demo/: README.md  pyproject.toml
examples/ci_gate_demo/: README.md  pyproject.toml
examples/ecommerce_demo/: README.md  pyproject.toml
examples/timeout_lab_demo/: README.md  pyproject.toml
src/ecommerce_app/: __init__.py  inventory.py  models.py
src/mutation_testing_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mutation_tool/: __main__.py  cli.py  config.py  discovery.py  models.py  service.py  storage.py
tests/integration/: test_session_runner.py
tests/unit/: test_cli.py  test_config.py  test_discovery.py  test_generator.py  test_reports.py  test_runner.py  test_service.py  test_ui.py
(+55 files in other folders)
