[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutation-testing-tool"
version = "0.1.0"
description = "CLI-first Python mutation testing tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "EMRE TOSMAN" }
]
dependencies = [
  "fastapi>=0.115.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
mutation-tool = "mutation_tool.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/integration/fixtures"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mutation_tool"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
